<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green_bg"
    tools:context=".auth.login.LoginActivity">

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/login_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="24dp"
        android:ems="10"
        android:autofillHints="@string/email_hint"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_textview_bg"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLabel" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/rounded_textview_bg"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt"
        android:autofillHints="@string/password_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxt">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            android:background="@drawable/rounded_button_red_bg"
            />
    </LinearLayout>


    <TextView
        android:id="@+id/textdummy_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/has_account_q"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_tb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up_tb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_label"
        android:textColor="@color/red_accent"
        android:textStyle="bold"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>